[package]
name = "cquisitor_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4.3"
serde_json = "1.0.94"
minicbor = { git = "https://gitlab.com/lisicky/minicbor", features = ["std", "half", "derive"] }

[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
noop_proc_macro = "0.3.0"

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
js-sys = "0.3.63"
wasm-bindgen = "0.2.84"
