[package]
name = "cquisitor_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
minicbor = { git = "https://gitlab.com/lisicky/minicbor", features = ["std", "half", "derive"] }
cardano-serialization-lib = "12.0.0-alpha.18"
uplc = { path = "./../../../svc/aiken/crates/uplc" }
pallas = { path = "./../../../svc/pallas2/pallas/pallas" }

blst = "0.3.11"
itertools = "0.10.5"
log = "0.4.20"

[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
noop_proc_macro = "0.3.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
tokio = { version = "1.36.0", features = ["full"] }


[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
reqwest = { version = "0.11.24", features = ["blocking", "json", "wasm-streams"] }
