[package]
name = "cquisitor_wasm"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
minicbor = { git = "https://gitlab.com/lisicky/minicbor", features = ["std", "half", "derive"] }
cardano-serialization-lib = "12.1.0"
uplc = "1.1.17"
pallas-addresses = "0.30.2"
pallas-codec = { version = "0.32.0", features = ["num-bigint"] }
pallas-crypto = "0.32.0"
pallas-primitives = "0.32.0"
pallas-traverse = "0.32.0"

blst = "0.3.11"
itertools = "0.10.5"
log = "0.4.20"

[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
noop_proc_macro = "0.3.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
tokio = { version = "1.36.0", features = ["full"] }


[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
reqwest = { version = "0.11.24", features = ["blocking", "json", "wasm-streams"] }
